[build-system]
requires = ["setuptools>61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pertpy_differential_expression"
version = "0.1"
description = "Perturbation Analysis in the scverse ecosystem."
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = {file = "LICENSE"}
authors = [
    {name = "Lukas Heumos"},
    {name = "Yuge Ji"},
    {name = "Lilly May"},
    {name = "Alejandro Tejada"},
    {name = "Johannes Köster"},
    {name = "Emma Dann"},
    {name = "Xinyue Zhang"},
    {name = "Xichen Wu"},
    {name = "Tessa Green"},
    {name = "Stefan Peidli"},
    {name = "Antonia Schumacher"},
    {name = "Gregor Sturm"},
]

maintainers = [
    {name = "Maximilian Nuber", email = "maximilian.d.nuber@gmail.com"},
]

classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Framework :: Jupyter",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Visualization",
]

dependencies = [
    "rich",
    "scanpy[leiden]",
    "muon",
    "requests",
    "scikit-misc",
    "scipy",
    "adjusttext",
    "decoupler",
    "sparsecca",
    "openpyxl",
    "pyarrow",
    "blitzgsea",
    "lamin_utils",
]